Link front and back end for login, signup, and product images

--- a/apps/web/src/login/login.scss
+++ b/apps/web/src/login/login.scss
@@ -40,3 +40,7 @@ span:hover {
     margin-top: 10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+.login-error {
+    color: red;
+}
