--- a/apps/web/src/app/app.html
+++ b/apps/web/src/app/app.html
@@ -1,1 +1,11 @@
-<router-outlet />
+<div class="flex flex-col min-h-screen">
+  
+  <app-navbar></app-navbar>
+
+  <main class="flex-grow">
+    <router-outlet></router-outlet>
+  </main>
+
+  <app-footer></app-footer>
+
+</div>
